<resources>
    <string name="app_name">MyAppUI</string>
    <string name="applogo">appLogo</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">or</string>
</resources>
